--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Блоки.sln"
+    "dotnet.defaultSolution": "this-will-do.sln"
 }
